[package]
name = "isogeny_walk_verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winterfell = {git = "https://github.com/novifinancial/winterfell"}
subtle = { version = "2", default-features = false }