[package]
name = "isogeny_walk_verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winterfell = {git = "https://github.com/OleSpjeldnas/winterfell"}
winter_utils = {git = "https://github.com/OleSpjeldnas/winterfell", package="winter-utils"}
math = {git = "https://github.com/OleSpjeldnas/winterfell", package="winter-math"}
examples = {git = "https://github.com/OleSpjeldnas/winterfell", package="examples"}
subtle = { version = "2", default-features = false }
log = "0.4.0"
env_logger = "0.9.1"

